--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,18 @@
-# GitHub Repository Configuration
+# GitHub Issues Integration Configuration
 # Copy this file to .env and fill in your actual values
-
-# Your GitHub repository URL
-# Format: https://github.com/USERNAME/REPOSITORY.git
-GITHUB_REPO_URL=https://github.com/YOUR_USERNAME/issue-tracker-data.git
 
 # Your GitHub Personal Access Token
 # Generate at: https://github.com/settings/tokens
-# Required scope: repo (full control of private repositories)
+# Required scopes: repo (full control of private repositories)
 GITHUB_TOKEN=ghp_your_token_here
 
-# Branch to push commits to (usually 'main' or 'master')
-GITHUB_BRANCH=main
+# Your GitHub Username
+GITHUB_OWNER=your_github_username
+
+# Repository Name (without .git extension)
+# Example: If your repo is https://github.com/john/my-project
+# Then GITHUB_REPO should be: my-project
+GITHUB_REPO=your_repository_name
 
 # Server Port (optional, default is 3000)
 # PORT=3000
