--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "author": "Your Name",
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.12.2",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^4.18.2",
